{
    "name": "DefaultInput",
    "maps": [
        {
            "name": "Character",
            "id": "70fb2c6a-c7e0-4af2-8ba4-afec69354a71",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "78fdcce1-2322-44c7-9482-d8a35f6c551c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Look",
                    "type": "PassThrough",
                    "id": "d27f4cc1-8191-4d4e-9f8a-0463d71f8ae8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "89530516-7c88-4399-894b-7dffce0ac9e4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "811459d0-2796-4cf6-bd51-ab3828edcb74",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "4cea6165-283b-4658-aa0d-3a53ca1a5c3f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GunSlot1",
                    "type": "Button",
                    "id": "b9f810a9-33a3-40b7-afc0-94cc2a3f3bf3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GunSlot2",
                    "type": "Button",
                    "id": "855df489-86cc-4530-a9c0-063c2e08aa6a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GunSlot3",
                    "type": "Button",
                    "id": "68871bbc-d551-4b48-b2db-b663ba9ce26b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GunSlot4",
                    "type": "Button",
                    "id": "1d325bfa-9c3c-457e-9d30-86b91eddbdf1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "f5ab81d9-29d5-447b-a313-533d2068f09a",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "abd3db87-b12a-4880-9c29-d964f49172d0",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": ";MouseAndKeyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "1ff4e6aa-dff3-4ccc-a556-2725ae543b52",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": ";MouseAndKeyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "85ac62dd-4a5c-4846-b271-47c132b8250d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": ";MouseAndKeyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "222f14e0-21e1-4903-ac13-4940c37431f1",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": ";MouseAndKeyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b41f5f47-a702-4ac0-9713-0322f19175ea",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": ";MouseAndKeyboard",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2e003d8e-e2e4-4daf-b1de-a664c48e8d9d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";MouseAndKeyboard",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4c20cb1e-091d-4c8d-852d-052dc9ffad4c",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": ";MouseAndKeyboard",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9312d189-2786-4c5d-8a8b-730ce42b26ee",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": ";MouseAndKeyboard",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "04371a81-8e78-4845-88f6-9868c809a8f7",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": ";MouseAndKeyboard",
                    "action": "GunSlot1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c8c8cce0-b745-4aae-8f62-989ab3a2025f",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": ";MouseAndKeyboard",
                    "action": "GunSlot2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "59fe1909-1d65-4825-a8f4-ca5c053ecf06",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": ";MouseAndKeyboard",
                    "action": "GunSlot3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c37f1771-8f6a-4601-87e6-0ec2aa95a00b",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": ";MouseAndKeyboard",
                    "action": "GunSlot4",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "d005ef96-b9cf-4b50-9b8e-3fdac61c7f37",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "a234a1f9-50d4-4d8c-ba4b-3faf72e53471",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e7895c47-fef5-47f0-889c-73df6561f02b",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "MouseAndKeyboard",
            "bindingGroup": "MouseAndKeyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}